@@ -156,4 +156,33 @@ extern void (*libbalsa_progress_set_text) (LibBalsaProgress * progress,
 extern void (*libbalsa_progress_set_fraction) (LibBalsaProgress * progress,
                                                gdouble fraction);
 
+/*
+ * Face and X-Face header support.
+ */
+gchar *libbalsa_get_header_from_path(const gchar * header,
+                                     const gchar * path, gsize * size,
+                                     GError ** err);
+GtkWidget *libbalsa_get_image_from_face_header(const gchar * content,
+                                               GError ** err);
+#if HAVE_COMPFACE
+GtkWidget *libbalsa_get_image_from_x_face_header(const gchar * content,
+                                                 GError ** err);
+#endif                          /* HAVE_COMPFACE */
+
+GQuark libbalsa_image_error_quark(void);
+#define LIBBALSA_IMAGE_ERROR libbalsa_image_error_quark()
+enum LibBalsaImageError {
+    LIBBALSA_IMAGE_ERROR_NO_DATA
+#if HAVE_COMPFACE
+        ,
+    LIBBALSA_IMAGE_ERROR_FORMAT,
+    LIBBALSA_IMAGE_ERROR_BUFFER,
+    LIBBALSA_IMAGE_ERROR_BAD_DATA
+#endif                          /* HAVE_COMPFACE */
+};
+
+#if HAVE_GTKSOURCEVIEW
+GtkWidget *libbalsa_source_view_new(gboolean highlight_phrases, GdkColor *q_colour);
+#endif                          /* HAVE_GTKSOURCEVIEW */
+
 #endif                          /* __LIBBALSA_H__ */
